--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - .:/var/www
   mysql:
-    image: mysql
+    image: mysql:5
     environment:
       MYSQL_ROOT_PASSWORD: root
   phpmyadmin:
