--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "petrik/test",
     "require": {
-        "symfony/http-foundation": "^5.2"
+        "symfony/http-foundation": "^5.2",
+        "twig/twig": "^3.0"
     },
     "autoload": {
         "psr-4": {"App\\": "src/"}
